--- a/index.html
+++ b/index.html
@@ -17,10 +17,19 @@
     />
   </head>
   <body>
-    <nav>
-      <div class="logo">
+    <nav class="flex-div">
+      <div class="logo nav-left">
         <i class="bx bx-menu menu-icon"></i>
         <span class="logo-name">Virtron</span>
+      </div>
+      <div class="nav-middle flex-div">
+        <div class="search-box"></div>
+      </div>
+      <div class="nav-right flex-div">
+        <img src="images/upload.png" alt="">
+        <img src="images/more.png" alt="">
+        <img src="images/notification.png" alt="">
+        <img src="https://virtronesports.com/img/Andrews.jpg" class="user-icon" alt="">
       </div>
 
       <div class="sidebar">
