--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
         <i class="bx bx-menu menu-icon"></i>
         <span class="logo-name">Virtron</span>
       </div>
+
       <div class="nav-middle flex-div">
         <div class="search-box"></div>
       </div>
+
       <div class="nav-right flex-div">
-        <img src="images/upload.png" alt="">
-        <img src="images/more.png" alt="">
-        <img src="images/notification.png" alt="">
-        <img src="https://virtronesports.com/img/Andrews.jpg" class="user-icon" alt="">
+        <i class="bx bx-search search-icon" ></i>
+        <i class='bx bx-bell bell'></i>
+        <img src="https://virtronesports.com/img/Andrews.jpg" class="user-icon" alt="gamer avatar">
       </div>
 
       <div class="sidebar">
@@ -102,6 +103,7 @@
       </div>
     </nav>
 
+
     <section class="overlay"></section>
 
     <script>
@@ -119,5 +121,12 @@
         navBar.classList.remove("open");
       });
     </script>
+        <h1>Hello</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt sit hic, at blanditiis distinctio inventore voluptates perspiciatis, deleniti eum quibusdam quas laborum id, earum modi asperiores. Maiores magni iste laboriosam?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt sit hic, at blanditiis distinctio inventore voluptates perspiciatis, deleniti eum quibusdam quas laborum id, earum modi asperiores. Maiores magni iste laboriosam?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt sit hic, at blanditiis distinctio inventore voluptates perspiciatis, deleniti eum quibusdam quas laborum id, earum modi asperiores. Maiores magni iste laboriosam?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt sit hic, at blanditiis distinctio inventore voluptates perspiciatis, deleniti eum quibusdam quas laborum id, earum modi asperiores. Maiores magni iste laboriosam?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt sit hic, at blanditiis distinctio inventore voluptates perspiciatis, deleniti eum quibusdam quas laborum id, earum modi asperiores. Maiores magni iste laboriosam?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt sit hic, at blanditiis distinctio inventore voluptates perspiciatis, deleniti eum quibusdam quas laborum id, earum modi asperiores. Maiores magni iste laboriosam?</p>
   </body>
 </html>
